--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.api</groupId>
-	<artifactId>todo</artifactId>
+	<artifactId>to-do</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>todo-list</name>
 	<description>Api Rest Full</description>
