--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-# datasource
-spring.datasource.password=admin
-spring.datasource.username=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_todo_dev
+spring.profiles.active=test
+spring.jpa.open-in-view=true
 
-# jpa
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+## datasource
+#spring.datasource.url=jdbc:mysql://localhost/db_to-do
+#spring.datasource.username=root
+#spring.datasource.password=root
+#
+## jpa
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
