--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,6 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+server.error.include-stacktrace=never
+api.security.token.secret=${JWT_SECRET:123456}
