--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # datasource
-spring.datasource.url=jdbc:mysql://localhost/db_to-do
+spring.datasource.url=jdbc:mysql://localhost/db_to-do_dev
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -9,6 +9,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-api.security.token.secret=${JWT_SECRET:123456}
-server.error.include-stacktrace=never
+
+
+
 
