Criando documentçação com swagger

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,10 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.api-doc.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 
+server.error.include-stacktrace=never
 
 
 
