--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,6 +12,8 @@ spring.jpa.show-sql=true
 api.security.token.secret=${JWT_SECRET:123456}
 server.error.include-stacktrace=never
 
+spring.api-doc.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 
 ## datasource
 #spring.datasource.url=jdbc:postgresql://localhost:5432/db_todo_dev
